# omniget

./: .gitignore  IMPROVEMENTS_ROADMAP.md  UX_IMPROVEMENTS_FOR_BEGINNERS.md  fix-macos-permissions-README.md  fix-macos-permissions.command  i18n_coverage_report.md  package-lock.json  package.json  pnpm-lock.yaml
.github/: CONTRIBUTING_i18n.md
.github/workflows/: i18n-coverage.yml
browser-extension/: sync.mjs
browser-extension/chrome/: README.md  manifest.json
browser-extension/chrome/pages/: options.css  options.js
browser-extension/chrome/src/: background.js  send-via-scheme.js
browser-extension/chrome/tests/: bridge-client.test.mjs  send-via-scheme.test.mjs
browser-extension/firefox/: manifest.json
browser-extension/firefox/pages/: options.html
browser-extension/firefox/src/: action-click.js  background.js  bridge-client.js
flatpak/: wtf.tonho.omniget.desktop  wtf.tonho.omniget.metainfo.xml
scripts/: check-i18n-coverage.cjs  i18n-tracker.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/omniget-core/src/core/: ytdlp.rs
src-tauri/omniget-core/src/models/: settings.rs
src-tauri/src/: extension_storage.rs  external_url.rs  lib.rs  local_bridge.rs  main.rs
src-tauri/src/commands/: extension_cookies.rs  settings.rs
src-tauri/src/core/: queue.rs
src/components/omnibox/: FormatSelector.svelte
src/components/onboarding/: OnboardingWizard.svelte
src/components/settings/: DependencyRow.svelte  SettingsBrowserExtension.svelte  SettingsPlugins.svelte
src/lib/: study-bridge.ts  tracker-bridge.ts  tracker-carrier-icons.ts  tracker-notifications.svelte.ts  tracker-privacy.svelte.ts  tracker-settings.svelte.ts  tracker-status-icons.ts
src/lib/i18n/: coverage.ts  el.json  en.json  es.json  fr.json  index.ts  it.json  ja.json  keys.ts  pt.json  zh-TW.json  zh.json
src/lib/stores/: changelog-store.svelte.ts  dependency-store.svelte.ts  download-store.svelte.ts  settings-store.svelte.ts
src/lib/study-music-components/: ChipsRow.svelte  DiscordRpcPanel.svelte  DownloadsDock.svelte  DraggableList.svelte  EmptyPlaceholder.svelte  ExpandableText.svelte  HeroGradient.svelte  LyricsPanel.svelte  LyricsTranslationPanel.svelte  MediaHero.svelte  MusicSidebar.svelte  MusicThemePanel.svelte  NavigationTile.svelte  NavigationTitle.svelte  PasteLyricsModal.svelte  PlayerBar.svelte  ProgressBar.svelte  (+9 more)
src/routes/: +layout.svelte  +page.svelte
(+65 files in other folders)
