[workspace]
members = [".", "omniget-core", "omniget-plugin-sdk"]
resolver = "2"

[package]
name = "omniget"
version = "0.6.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "omniget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "stream", "http2", "gzip", "brotli", "deflate", "rustls-tls", "socks"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
m3u8-rs = "6"
aes = "0.8"
cbc = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sanitize-filename = "0.6"
unicode-normalization = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"
urlencoding = "2"
rand = "0.10.0"
base64 = "0.22.1"
filetime = "0.2.27"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
xz2 = { version = "0.1", features = ["static"] }
sha2 = "0.10"
open = "5"
omniget-core = { path = "omniget-core", features = ["desktop"] }
omniget-plugin-sdk = { path = "omniget-plugin-sdk" }
libloading = "0.8"
which = "7"
librqbit = "8.1.1"
discord-rich-presence = "0.2"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_System_Com", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"

[profile.dev]
debug = 0
codegen-units = 256
incremental = true

[profile.dev.package."*"]
debug = false
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
